Fixed up numerous style & javadoc issues.